// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable Component In edit mode should match snapshot 1`] = `
<table
  class="dataTable"
>
  <tbody>
    <tr
      class="row editable"
    >
      <td>
        <form>
          <input
            class="inputCell"
            required=""
            type="text"
            value=""
          />
        </form>
      </td>
      <td>
        <form>
          <input
            class="inputCell"
            required=""
            type="text"
            value=""
          />
        </form>
      </td>
      <td
        class="controls editable"
      >
        <img
          alt="Submit"
          class="controlButton"
          src="[object Object]"
        />
        <img
          alt="Delete"
          class="controlButton"
          src="[object Object]"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable Component In edit mode, with items should match snapshot 1`] = `
<table
  class="dataTable"
>
  <tbody>
    <tr
      class="row editable"
    >
      <td>
        <form>
          <input
            class="inputCell"
            required=""
            type="text"
            value=""
          />
        </form>
      </td>
      <td>
        <form>
          <input
            class="inputCell"
            required=""
            type="text"
            value=""
          />
        </form>
      </td>
      <td
        class="controls editable"
      >
        <img
          alt="Submit"
          class="controlButton"
          src="[object Object]"
        />
        <img
          alt="Delete"
          class="controlButton"
          src="[object Object]"
        />
      </td>
    </tr>
    <tr
      class="row editable"
    >
      <td>
        <form>
          <input
            class="inputCell"
            required=""
            type="text"
            value="test"
          />
        </form>
      </td>
      <td>
        <form>
          <input
            class="inputCell"
            required=""
            type="text"
            value="fixture"
          />
        </form>
      </td>
      <td
        class="controls editable"
      >
        <img
          alt="Submit"
          class="controlButton"
          src="[object Object]"
        />
        <img
          alt="Delete"
          class="controlButton"
          src="[object Object]"
        />
      </td>
    </tr>
    <tr
      class="row editable"
    >
      <td>
        <form>
          <input
            class="inputCell"
            required=""
            type="text"
            value="other"
          />
        </form>
      </td>
      <td>
        <form>
          <input
            class="inputCell"
            required=""
            type="text"
            value="fixture"
          />
        </form>
      </td>
      <td
        class="controls editable"
      >
        <img
          alt="Submit"
          class="controlButton"
          src="[object Object]"
        />
        <img
          alt="Delete"
          class="controlButton"
          src="[object Object]"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`DataTable Component In read-only mode should match snapshot 1`] = `
<table
  class="dataTable"
>
  <tbody>
    <tr
      class="explainerText"
    >
      <td>
        <div>
          Nothing to display.
        </div>
        <br />
        <div>
          Add dictionary items using the cells above, all cells are WSYWYG and can be updated individually, use the green button or hit Enter to submit an entry. Use the red button to delete rows.
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
